--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1> Coming Soon to your local starbucks! </h1>
+<h1>Real site Coming soon.</h1>
+This will be moved to <a href="WLTCS.us">this</a> soon.
+
