--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Real site Coming soon.</h1>
-This will be moved to <a href="WLTCS.us">this</a> soon.
+We are currently in the process of developing our site.
 
