--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Logo</p>
+    <img>https://avatars.githubusercontent.com/u/71912281?s=200&v=4</img>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
