--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <img>https://avatars.githubusercontent.com/u/71912281?s=200&v=4</img>
+    <img src="https://avatars.githubusercontent.com/u/71912281?s=200&v=4"></img>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
@@ -54,7 +54,7 @@ hr {
     <p id="demo" style="font-size:30px"></p>
   </div>
   <div class="bottomleft">
-    <p>Some text</p>
+    <p></p>
   </div>
 </div>
 
