--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
         <title>WeLikeToCodeStuff</title>
     </head>
-    <body onload="toastOnLoad()"></body>
+    <body></body>
         <style>
         /*body {
             font-family: 'Oswald', sans-serif;
