--- a/github.html
+++ b/github.html
@@ -275,15 +275,18 @@ footer {
 			
 			
 			
-                        <figure>
+
+			
+			
+                    </section>
+		<section>
+			                        <figure>
                             <a href="https://github.com/WeLikeToCodeStuff/chatroom" target="_blank"><img src="https://avatars.githubusercontent.com/u/71912281?s=200&v=4" alt="6 Months of Learning Game Development in Unity (Progress & Result)"></a>
                             <figcaption>
                                 <a href="https://github.com/WeLikeToCodeStuff/MeltedClicker" target="_blank">MeltedClicker</a>
                             </figcaption>
                         </figure>
-			
-			
-                    </section>
+		</section>
 
         </section>
     </body>
