--- a/index.dev.html
+++ b/index.dev.html
@@ -38,7 +38,7 @@
     background: #151D21;
     background-image: url('./wallpaper.gif');
     background-size: 100%;
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;*/
     color: white;
 }
         .center {text-align: center;}
