--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     }
         body {
     background: #151D21;
-    background-image: url('http://danidev.net/images/bg.png');
+    background-image: url('./wallpaper.gif');
     background-size: 100%;
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;*/
     color: white;
 }
         .center {text-align: center;}
