--- a/github.html
+++ b/github.html
@@ -24,9 +24,9 @@ html {
 
 body {
     background: #151D21;
-    background-image: url('http://danidev.net/images/bg.png');
+    background-image: url('./wallpaper.gif');
     background-size: 100%;
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;
     color: white;
 }
 
