--- a/github.html
+++ b/github.html
@@ -26,7 +26,7 @@ body {
     background: #151D21;
     background-image: url('./wallpaper.gif');
     background-size: 100%;
-    /*background-repeat: no-repeat;
+    /*background-repeat: no-repeat;*/
     color: white;
 }
 
