--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ md-success-toast-theme {
                 <div class="col-md-12 text-center">
                     <a href="#about" class="btn btn-outline-primary"><i class="fas fa-bookmark"></i> About</a>&nbsp;
                     <a href="github.html" class="btn btn-outline-warning"><i class="fab fa-github"></i> Github</a>&nbsp;
-                    <a href="https://discord.gg/wedonmthaveadsicorddontask" class="btn btn-outline-success"><i class="fab fa-discord" target="_blank"></i> Discord</a>
+                    <a href="https://discord.gg/3XbNqrGKJX" class="btn btn-outline-success"><i class="fab fa-discord" target="_blank"></i> Discord</a>
                 </div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div class="center" id="about" name="about">
